# Graphite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Project_Grades.md  README.md  benchmark.py  cortex-implementation-plan-2.md  enhancement_roadmap.md  final_stage.md  maturin.toml  pyproject.toml  roadmap.md
docs/: Codebase-Review-Project-Atlas.md  JS_TS_Support_Plan.md  JS_TS_update.md  Q_P_Mismatch_Fix.md  Step_3_2_Context_Management.md  current_status_2326.md  fixes_test_graph_updates.md  gap_remedy_implementation_plan.md  gap_remedy_phase_3_3_implementation_plan.md  gap_remedy_phase_4_implementation_plan.md  gap_remedy_phase_5_implementation_plan.md  js_import_resolution_issue.md  project-status-2-4.md  roadmap_phase3_2_implementation_plan.md  roadmap_phase_2_evaluation.md  roadmap_phase_3_4_implementation_plan.md  roadmap_phase_4_1_fix_guide.md  roadmap_phase_4_1_implementation_plan.md  roadmap_phase_4_2_fix_guide.md  roadmap_phase_4_2_implementation_plan.md  roadmap_phase_4_3_implementation_plan.md  roadmap_phase_4_gap_remediation.md  smarter_ai_prompt.md  smarter_ai_prompt_context.md  tree-sitter-parsing-solution-2-4-26.md  watcher_test_regression_fix.md
openclaw_plugin/: HOOK.md  README.md  index.js  openclaw.plugin.json
python_shell/: generate_map_script.py  temp_test.py  test_watcher.py
python_shell/atlas/: agent.py  cli.py  context.py  embeddings.py  health.py  llm.py  mcp_server.py  tools.py
python_shell/cortex/: agent.py  cli.py  config.py  context.py  embeddings.py  llm.py  mcp_server.py  tools.py
python_shell/graphite/: agent.py  agent_context.py  chatbot_memory.py  cli.py  client.py  config.py  context.py  daemon.py  daemon_control.py  embeddings.py  hooks_control.py  llm.py  mcp_install.py  mcp_server.py  overflow_reconciler.py  protocol.py  repo_context.py  spool.py  spool_extractor.py
python_shell/tests/: test_agent_context.py  test_bug_fixes.py  test_chat.py  test_cli_remember_spool.py  test_config.py  test_context.py  test_conversation.py  test_daemon.py  test_daemon_control.py  test_daemon_ingest.py  test_embeddings.py  test_error_handling.py  test_evaluation.py  test_graph_updates.py  test_hook_handler.py  test_hooks_control.py  test_incremental.py  test_llm.py  test_mcp_install.py  test_mcp_tools.py  test_memory_context.py  test_overflow_reconciler.py  test_parser.py  test_pipeline.py  test_reconciler.py  test_reflection.py  test_spool.py  test_spool_extractor.py  test_tool_surface.py  test_tools.py
rust_core/: Cargo.toml
rust_core/benches/: incremental_benchmark.rs
rust_core/examples/: generate_map.rs  test_graph_build.rs
rust_core/queries/javascript/: symbols.scm
rust_core/queries/python/: symbols.scm  tags.scm
rust_core/queries/rust/: symbols.scm
rust_core/queries/typescript/: imports.scm  symbols.scm
rust_core/src/: callgraph.rs  cfg.rs  chunk.rs  cooccurrence.rs  cpg.rs  dataflow.rs  entity.rs  graph.rs  import_resolver.rs  incremental_parser.rs  knowledge_graph.rs  lib.rs  parser.rs  persistence.rs  symbol_table.rs  tag_index.rs  test_utils.rs  watcher.rs
rust_core/tests/: test_callgraph.rs  test_cfg.rs  test_cpg.rs  test_dataflow.rs  test_graph_construction.rs  test_graph_updates.rs  test_import_canonicalization.rs  test_incremental_parsing.rs  test_js_import_resolution.rs  test_knowledge_graph.rs  test_pagerank.rs  test_persistence.rs  test_phase2_criteria.rs  test_repo_map.rs  test_symbol_harvesting.rs  test_tag_index.rs  test_watcher.rs
rust_core/tests/fixtures/js_test_repo/src/: index.js
rust_core/tests/fixtures/js_test_repo/src/components/: Button.tsx
rust_core/tests/fixtures/js_test_repo/src/utils/: helpers.js
test_corpus/: eval_queries.json  generate_corpus.py  universe.json
test_corpus/associates/: aisha-hassan.expected.json  aisha-hassan.md  alex-petrov.expected.json  alex-petrov.md  angela-rivera.expected.json  angela-rivera.md  carlos-mendez.expected.json  carlos-mendez.md  daniel-reeves.expected.json  daniel-reeves.md  david-kim.expected.json  david-kim.md  derek-washington.expected.json  derek-washington.md  emily-zhang.expected.json  emily-zhang.md  james-liu.expected.json  james-liu.md  john-doe.expected.json  john-doe.md  kevin-park.expected.json  kevin-park.md  lisa-wang.expected.json  lisa-wang.md  marcus-johnson.expected.json  marcus-johnson.md  maria-santos.expected.json  maria-santos.md  nina-kowalski.expected.json  nina-kowalski.md  olivia-foster.expected.json  olivia-foster.md  priya-patel.expected.json  priya-patel.md  rachel-torres.expected.json  rachel-torres.md  ryan-obrien.expected.json  ryan-obrien.md  sarah-chen.expected.json  sarah-chen.md  (+4 more)
test_corpus/meetings/: 1on1-aisha-hassan-kevin-park-2024-11-11.md  1on1-aisha-hassan-kevin-park-2025-04-08.expected.json  1on1-aisha-hassan-kevin-park-2025-04-08.md  1on1-aisha-hassan-sarah-chen-2024-09-11.expected.json  1on1-aisha-hassan-sarah-chen-2024-09-11.md  1on1-aisha-hassan-sarah-chen-2024-12-08.md  1on1-aisha-hassan-sarah-chen-2025-02-25.expected.json  1on1-aisha-hassan-sarah-chen-2025-02-25.md  1on1-david-kim-tom-brennan-2024-10-27.expected.json  1on1-david-kim-tom-brennan-2024-10-27.md  1on1-john-doe-daniel-reeves-2025-01-05.expected.json  1on1-john-doe-daniel-reeves-2025-01-05.md  1on1-john-doe-daniel-reeves-2025-05-23.expected.json  1on1-john-doe-daniel-reeves-2025-05-23.md  1on1-john-doe-lisa-wang-2024-09-14.expected.json  1on1-john-doe-lisa-wang-2024-09-14.md  1on1-john-doe-lisa-wang-2024-12-10.md  1on1-john-doe-lisa-wang-2025-03-17.md  1on1-marcus-johnson-olivia-foster-2025-01-27.expected.json  1on1-marcus-johnson-olivia-foster-2025-01-27.md  1on1-marcus-johnson-olivia-foster-2025-03-25.expected.json  1on1-marcus-johnson-olivia-foster-2025-03-25.md  1on1-sarah-chen-lisa-wang-2024-08-04.expected.json  1on1-sarah-chen-lisa-wang-2024-08-04.md  1on1-sarah-chen-lisa-wang-2024-11-02.expected.json  1on1-sarah-chen-lisa-wang-2024-11-02.md  1on1-sarah-chen-lisa-wang-2025-05-26.md  1on1-sarah-chen-marcus-johnson-2024-10-11.expected.json  1on1-sarah-chen-marcus-johnson-2024-10-11.md  1on1-sarah-chen-marcus-johnson-2025-04-19.md  (+253 more)
(+95 files in other folders)
