[project]
name = "cortex"
version = "0.1.0"
description = "Knowledge graph memory system for LLMs"
authors = [{ name = "Alec Petty", email = "alexander@petty.is" }]
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "tiktoken>=0.5",
    "ollama>=0.1",
    "fastembed>=0.2",
    "numpy>=1.24",
    "networkx>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]
requires-python = ">=3.10"

[project.scripts]
cortex = "cortex.cli:main"
cortex-mcp = "cortex.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]
mlx = [
    "mlx-lm>=0.20",
]
mcp = [
    "mcp[cli]>=1.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
binding = "pyo3"
module-name = "cortex.semantic_engine" # Name of the python module that maturin will create from rust_core
manifest-path = "rust_core/Cargo.toml"
python-source = "python_shell"
